# GetKernel

./: .gitignore  CONTRIBUTING.md  GetKernel.py  MANIFEST.in  README.md  README_TR.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/workflows/: ci.yml
config/: default_config.yaml  user_config.yaml.example
config/fragments/: example-debug.cfg
config/profiles/: desktop.cfg  minimal.cfg  server.cfg
modules/: __init__.py  compiler.py  config_manager.py  dependency_manager.py  grub_manager.py  installer.py  kernel_fetcher.py  package_builder.py  package_depot.py  system_advisor.py  system_checker.py  uninstaller.py
scripts/: install.sh  setup_env.sh
tests/: __init__.py  test_compiler.py  test_config.py  test_fetcher.py  test_helpers.py  test_installer.py  test_kernel_reuse.py  test_module_groups.py  test_package_builder.py  test_package_depot.py  test_system.py  test_system_advisor.py  test_uninstaller.py  test_validator.py
utils/: __init__.py  constants.py  exceptions.py  helpers.py  logger.py  module_groups.py  ui.py  validator.py
