[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getkernel"
version = "1.0.0"
description = "Automated Linux kernel build and DEB packaging for Debian-based systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
authors = [{ name = "Cuma KURT", email = "cumakurt@gmail.com" }]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "packaging>=21.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
getkernel = "GetKernel:main"

[project.urls]
Homepage = "https://github.com/cumakurt/GetKernel"
Repository = "https://github.com/cumakurt/GetKernel"
LinkedIn = "https://www.linkedin.com/in/cuma-kurt-34414917/"

[tool.setuptools]
py-modules = ["GetKernel"]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
